--- a/css/train/lesson2/lesson2.css
+++ b/css/train/lesson2/lesson2.css
@@ -1,22 +1,95 @@
 
-body{
+body,ul,h3,h4,p{
   margin: 0;
   padding: 0;
 }
 
+
 .header{
-  height: 50px;
   background-color: rgb(51, 51, 51);
   position: relative;
+  height: 64px;
+  margin-right: 5px;
 }
 
-.banner {
+
+.logo{
   position: absolute;
-  right: 20px;
-  bottom: 0;
+  left: 16px;
+  top: 50%;
+  margin-top: -16px;
+  background: transparent;
 }
 
-.banner ul li{
-  list-style-type: disc;
+.nav{
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  margin-top: -10px;
+}
+
+
+.nav div {
   display: inline-block;
 }
+
+/* 
+  这里的设置为什么不能放到 .nav div下面？
+*/
+.nav div a{
+  color: white;
+  text-decoration: none;
+  font-size: 12px;
+  margin-left: 2px;
+}
+
+
+/* 
+  怎样得到一个圆  思路:一个正方形 且半径为高的一半就是圆。
+  对于没有内容的span元素 其大小是0*0 且给行框元素设置宽高是无效的。所以要设置宽高只能改成块级元素
+  又因为要水平显示所以只能是inline-block ,这样可以设置宽高了,border-radius是半径，设置为
+  高的1/2。要得到一个圆 宽、高值必须相等。
+  */
+.nav div span{
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  background-color: black;
+  border-radius: 10px;
+  margin-left: 4px;
+}
+
+.content{
+  background-color: rgb(222, 222, 222);
+  padding: 10px;
+}
+
+.content section{
+  background-color: white;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 15px;
+}
+
+.content section h4,p,span{
+  margin-top: 15px;
+  line-height: 32px;
+}
+
+.content section img{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
