--- a/css/train/lesson3/lesson3.css
+++ b/css/train/lesson3/lesson3.css
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+body{
+  min-width: 700px;
+}
+
 
 div{
   box-sizing: border-box;
@@ -13,17 +17,15 @@ div{
 .main{
   background-color: #eee;
   border: 1px #999 solid;
-  padding: 20px;
+  padding-left: 240px;
+  padding-right: 160px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   margin: 20px;
   position: relative;
 }
 
-.logo{
-  width: 200px;
-  padding: 20px;
-  border: 1px #999 solid;
-  background-color: #fff;
-}
+
 
 .logo img{
   width: 80px;
@@ -42,24 +44,32 @@ div{
   margin-left: 6px;
 }
 
-.desc{
-  padding: 20px;
+.logo,
+.desc,
+.team_member{
   border: 1px #999 solid;
+  padding: 20px;
   background-color: #fff;
-  position: absolute;
-  margin-left: 220px;
-  margin-top: 20px;
-  top: 0;
+  position: relative;
+}
+
+.logo {
+  width: 200px;
+  float: left;
+  margin-left: -100%;
+  left: -220px;
+}
+
+.desc{
+  width: 100%;
+  float: left;
 }
 
 .team_member{
-  padding: 20px;
-  background-color: #fff;
-  border: 1px #999 solid;
   width: 120px;
-  position: absolute;
-  right: 0;
-  top: 0;
+  float: right;
+  margin-right: -120px;
+  right: -20px;
 }
 
 .team_member div{
@@ -80,4 +90,12 @@ div{
 .team_member :last-child{
   background-image: url('./fk_4.png');
   margin-bottom: 0;
+}
+
+
+ .main::after{
+  content: '';
+  display: block;
+  clear: both;
+  visibility: hidden;
 }
