--- a/wei_xin/lesson11/pages/index/index.wxml
+++ b/wei_xin/lesson11/pages/index/index.wxml
@@ -13,3 +13,12 @@
 </view>
 
 <image class="image" src="{{image_src}}" mode="{{image_mode}}" lazy-load="{{true}}" binderror='binderror' bindload='bindload'/>
+
+<view class="title" hover-class="none" hover-stop-propagation="false">
+  <text selectable="false" space="false" decode="false">Video</text>
+  <view class="line"></view>
+</view>
+
+<video class="video" loop="{{loop_video}}" autoplay="{{autoPlay}}" controls="{{controls}}" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400"
+  bindplay="video_play" bindpause="video_pause" bindended="video_ended" bindwaiting="wait" binderror="error"
+ />
