--- a/wei_xin/api/net/pages/index/index.wxml
+++ b/wei_xin/api/net/pages/index/index.wxml
@@ -8,3 +8,17 @@
   <view class="line" hover-class="none" hover-stop-propagation="false"></view>
 </view>
 
+<view class="container">
+  <view class="page-body">
+    <image wx:if="{{imageSrc}}" src="{{imageSrc}}" mode="center" />
+    <block wx:else>
+      <view class="page-body-wording">
+        <text class="page-body-text">点击按钮下载服务端示例图片</text>
+      </view>
+      <view class="btn-area">
+        <button bindtap="downloadImage" type="primary">下载</button>
+      </view>
+    </block>
+  </view>
+</view>
+
