--- a/wei_xin/api/net/pages/index/index.wxss
+++ b/wei_xin/api/net/pages/index/index.wxss
@@ -10,3 +10,10 @@
   background-color: #999999;
   margin: 10px 20px 0 20px;
 }
+
+.page-body image {
+  width: 600rpx;
+  height: 600rpx;
+
+  margin: 0 75rpx;
+}
