--- a/wei_xin/api/net/pages/request/request.wxml
+++ b/wei_xin/api/net/pages/request/request.wxml
@@ -1,13 +1,8 @@
 <view class="request" hover-class="none" hover-stop-propagation="false">
 
-   <block wx:if="{{url}}">
+ 
     <view class="tip" hover-class="none" hover-stop-propagation="false">
-      <text 点击发起请求></text>
+      <text>{{response}}</text>
     </view>
-  </block>
-  <block wx:else>
-    <button class="btn" type="primary" loading="{{loading}}" disabled="{{disabled}}" bindtap="request">
-      request
-    </button>
-  </block>
+    <button class="btn" type="primary" loading="{{loading}}" disabled="{{disabled}}" bindtap="request" style="margin-Top=10">Request</button>
 </view>
