--- a/wei_xin/api/net/pages/request/request.wxss
+++ b/wei_xin/api/net/pages/request/request.wxss
@@ -2,8 +2,13 @@
 
 .tip{
   height: 300px;
-  background-color: #999999;
+  background-color: #fafafa;
   margin-bottom: 20px;
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+  line-height: 300px;
+  font-size: 18px;
 }
 
 
