--- a/smallBookShelf/pages/books/books.wxml
+++ b/smallBookShelf/pages/books/books.wxml
@@ -1,15 +1,35 @@
+<view class="swiper-container">
 
 
-<block wx:if="{{'loading'}}">
-    <!-- showLoading -->
-</block>
+    <block wx:if="{{'loading'}}">
+        <!-- showLoading -->
+        <view class="donut-container">
+            <view class="donut"></view>
+        </view>
+    </block>
 
-<block wx:else>
-    <swiper class="" indicator-dots="false" indicator-color="{{indicator}}" autoplay="{{autoplay}}" 
-        current="0" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}" vertical="{{vertical}}" 
-        bindchange="" bindanimationfinish="">
-        <swiper-item class="" item-id="">
-            
-        </swiper-item>
-    </swiper>
-</block>
+
+    <block wx:else>
+        <swiper class="" indicator-dots="false" indicator-color="{{indicator}}" autoplay="{{autoplay}}" current="0"
+            interval="{{interval}}" duration="{{duration}}" circular="{{circular}}" vertical="{{vertical}}" bindchange=""
+            bindanimationfinish="">
+            <block wx:for="{{bookList}}">
+                <swiper-item class="" item-id="">
+                    <view class="" hover-class="none" hover-stop-propagation="false">
+                        <image class="" src="" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror=""
+                            bindload=""></image>
+                        <view class="" hover-class="none" hover-stop-propagation="false">
+                            <text class="" selectable="false" space="false" decode="false"></text>
+                        </view>
+                        <view class="" hover-class="none" hover-stop-propagation="false">
+                            <text class="" selectable="false" space="false" decode="false"></text>
+                        </view>
+                        <view class="" hover-class="none" hover-stop-propagation="false">
+                            <text class="" selectable="false" space="false" decode="false"></text>
+                        </view>
+                    </view>
+                </swiper-item>
+            </block>
+        </swiper>
+    </block>
+</view>
