修正登录的逻辑

--- a/smallBookShelf/client/pages/books/books.wxml
+++ b/smallBookShelf/client/pages/books/books.wxml
@@ -1,7 +1,7 @@
 <view class="swiper-container">
 
 
-    <block wx:if="{{'loading'}}">
+    <block wx:if="{{loading}}">
         <!-- showLoading -->
         <view class="donut-container">
             <view class="donut"></view>
