--- a/smallBookShelf/client/pages/books/books.wxss
+++ b/smallBookShelf/client/pages/books/books.wxss
@@ -32,7 +32,7 @@
   justify-content: space-around;
   align-items: center;
 
-  border-radius: 20px;
+  border-radius: 20rpx;
   box-shadow: 0 0 10rpx #dbdbdb;
 }
 
