--- a/smallBookShelf/client/pages/my/my.wxml
+++ b/smallBookShelf/client/pages/my/my.wxml
@@ -12,7 +12,7 @@
             <!-- 下载进度条 -->
             <view class="loading-container" wx:if="{{downloading}}">
                 <progress percent="{{downloadPercent}}" stroke-width="6" activiColor="#1aad19" backgroundColor="#cdcdcd"
-                    show-info={{'showInfo'}} />
+                    show-info />
             </view>
         </view>
 
