--- a/smallBookShelf/client/pages/detail/detail.wxss
+++ b/smallBookShelf/client/pages/detail/detail.wxss
@@ -1,7 +1,4 @@
-
-
-
-.book-container{
+.book-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -10,20 +7,20 @@
     padding: 50rpx 30rpx;
 }
 
-.book-info{
+.book-info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
 }
 
-.book-image{
+.book-image {
     width: 200rpx;
     height: 300rpx;
     box-shadow: 0 0 10rpx #cdcdcd
 }
 
-.book-desc{
+.book-desc {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -32,18 +29,109 @@
     padding-left: 30rpx;
 }
 
-.book-main-text{
+.book-main-text {
     color: #1e1e1e;
     font-size: 35rpx;
 }
 
-.book-text{
+.book-text {
     color: #8a8a8a;
     font-size: 30rpx;
 }
 
-.button-area > button{
+.button-area>button {
     font-size: 30rpx;
 }
 
+.comment-container {
+    padding-top: 30rpx;
+}
 
+.comment-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-bottom: 30rpx;
+}
+
+
+.comment-title>text {
+    font-size: 30rpx;
+    color: #cdcdcd;
+}
+
+.comment-area {
+    padding: 20rpx 30rpx;
+}
+
+.comment-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+
+.comment-placeholder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: #dcdcdc;
+}
+
+.comment-item:last-child {
+    margin-bottom: 180rpx;
+}
+
+.avatar-container {
+    width: 80rpx;
+    height: 80rpx;
+    margin-right: 20rpx;
+}
+
+.user-avater {
+    width: 80rpx;
+    height: 80rpx;
+}
+
+.comment-content {
+    display: flex;
+    max-width: 590rpx;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+
+.user-name {
+    color: #8a8a8a;
+    font-size: 30rpx;
+}
+
+.user-comment {
+    display: inline-block;
+    margin-top: 10rpx;
+    color: #1e1e1e;
+    font-size: 35rpx;
+}
+
+.comment-time {
+    display: inline-block;
+    margin-top: 10rpx;
+    color: #cdcdcd;
+    font-size: 20rpx;
+}
+
+.comment-loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-container {
+    width: 250rpx;
+    color: #cdcdcd;
+    margin-top: 30rpx;
+}
